proper backable control

--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -36,10 +36,13 @@
     <x:Int32 x:Key="MaxFolderNameLength">100</x:Int32>
     <x:Int32 x:Key="MaxFolderDescrLength">2000</x:Int32>
     <x:Int32 x:Key="MaxTagLength">50</x:Int32>
+	<x:Int32 x:Key="MaxVaalueLength">100</x:Int32>
 	
     <x:Double x:Key="MetaItemWidth">200</x:Double>
 	<x:Double x:Key="MetaItemTextWidth">150</x:Double>
+	<x:Double x:Key="MetaItemShortTextWidth">110</x:Double>
     <x:Double x:Key="MetaItemHeight">50</x:Double>
+	<!--<GridLength x:Key="MetaItemHeight_ForGrid">50</GridLength>-->
 
     <LinearGradientBrush x:Key="DiagonalNESWBrush" EndPoint="0.0,1.0" StartPoint="1.0,0.0">
         <GradientStop Color="Black" Offset="0"/>
@@ -1016,8 +1019,9 @@
 		<Setter Property="BorderBrush" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
 		<Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThickness}"/>
 		<!--<Setter Property="Padding" Value="8,5,0,0"/>-->
-        <Setter Property="Padding" Value="8,0,8,0"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+		<Setter Property="Padding" Value="{ThemeResource TextControlThemePadding}"/>
+		<Setter Property="Margin" Value="0"/>
+		<Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="VerticalContentAlignment" Value="Stretch"/>
