--- a/UniFiler10/Controlz/LolloTextBox.xaml
+++ b/UniFiler10/Controlz/LolloTextBox.xaml
@@ -12,9 +12,9 @@
 		<Setter Property="Background" Value="{ThemeResource SystemControlBackgroundAltHighBrush}"/>
 		<!--<Setter Property="BorderBrush" Value="{ThemeResource SystemControlForegroundChromeDisabledLowBrush}"/>-->
 		<Setter Property="BorderBrush" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
-		<Setter Property="SelectionHighlightColor" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
 		<Setter Property="BorderThickness" Value="{ThemeResource TextControlBorderThemeThickness}"/>
 		<!--<Setter Property="BorderThickness" Value="{StaticResource EThickness}"/>-->
+		<Setter Property="SelectionHighlightColor" Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
 		<Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
 		<Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}"/>
 		<Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -25,6 +25,7 @@
 		<Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Auto"/>
 		<Setter Property="ScrollViewer.IsDeferredScrollingEnabled" Value="False"/>
 		<Setter Property="Padding" Value="{ThemeResource TextControlThemePadding}"/>
+		<Setter Property="Margin" Value="0"/>
 		<Setter Property="IsEditableDecoratorVisible" Value="True"/>
 		<Setter Property="IsDropDownButtonVisible" Value="True"/>
 		<Setter Property="TextWrapping" Value="Wrap"/>
