--- a/UniFiler10/Views/SettingsView.xaml
+++ b/UniFiler10/Views/SettingsView.xaml
@@ -8,8 +8,8 @@
 	xmlns:utilz="using:Utilz"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"    
-    mc:Ignorable="d"
-	DataContextChanged="OnDataContextChanged">
+    mc:Ignorable="d">
+	<!--DataContextChanged="OnDataContextChanged">-->
 
 	<!--Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"-->
 
