--- a/UniFiler10/Styles/Styles.xaml
+++ b/UniFiler10/Styles/Styles.xaml
@@ -8,6 +8,7 @@
     <Thickness x:Key="PanelMarginZero">0, 0, 0, 0</Thickness>
     <Thickness x:Key="PanelPadding8282">8, 2, 8, 2</Thickness>
 	<Thickness x:Key="Thickness2222">2</Thickness>
+	<Thickness x:Key="Thickness4444">4</Thickness>
 
 	<GridLength x:Key="GridSize4Placeholder_Small">10</GridLength>
     <GridLength x:Key="GridSize4Placeholder_Medium">20</GridLength>
